<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#ff8dbd64">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/EtEmail"
        android:text="@string/tl_email"
        android:textColor="#ffdad8d5"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/EtEmail2"
        android:text="@string/tc_digiteNovamenteEmail"
        android:textColor="#ffdad8d5"
        android:layout_below="@+id/EtEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword"
        android:ems="10"
        android:id="@+id/EtSenha"
        android:text="@string/tl_senha"
        android:textColor="#ffdad8d5"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword"
        android:ems="10"
        android:id="@+id/EtSenha2"
        android:text="@string/tc_digiteNovamenteSenha"
        android:textColor="#ffdad8d5"
        android:layout_below="@+id/EtSenha"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tc_registrar"
        android:id="@+id/BtRegistrar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:onClick="chamarActivityInicial2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tc_meu"
        android:id="@+id/textView2"
        android:textColor="#ffffffff"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tc_cadastro"
        android:id="@+id/textView3"
        android:textColor="#ffffffff"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/BtRegistrar"
        android:layout_alignEnd="@+id/BtRegistrar"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tc_insira"
        android:id="@+id/textView"
        android:layout_below="@+id/EtEmail2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp"
        android:textColor="#ffffffff" />
</RelativeLayout>
