<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/Tela_login"
    android:longClickable="false"
    android:clickable="false"
    android:background="#ff8dbd64">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tl_bem_vindo"
        android:id="@+id/TvBemVindo"
        android:textColor="#fff7fff9"
        android:textIsSelectable="false"
        android:shadowColor="#ff000000"
        android:singleLine="false"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tl_logar"
        android:id="@+id/BtIniciar"
        android:nestedScrollingEnabled="false"
        android:onClick="chamarActivityTelaInicial"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/IbFace"
        android:src="@mipmap/ic_face2"
        android:contentDescription=""
        android:layout_below="@+id/CbDeixarLogado"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tl_faça"
        android:id="@+id/TvFace"
        android:textColor="#ffffffff"
        android:layout_alignBottom="@+id/IbFace"
        android:layout_toStartOf="@+id/BtTrocaSenha"
        android:layout_toLeftOf="@+id/BtTrocaSenha" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tl_login2"
        android:id="@+id/TvLogin"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/TvBemVindo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffffff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/EtEmail"
        android:layout_below="@+id/TvLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp"
        android:text="@string/tl_email"
        android:textColor="#ffdad8d5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tl_lembre"
        android:id="@+id/CbDeixarLogado"
        android:checked="false"
        android:textColor="#ffffffff"
        android:layout_below="@+id/BtTrocaSenha"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword"
        android:ems="10"
        android:id="@+id/EtSenha"
        android:text="@string/tl_senha"
        android:textColor="#ffdad8d5"
        android:layout_below="@+id/EtEmail"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tl_cadastro"
        android:id="@+id/BtCadastro"
        android:onClick="chamarActivityTelaCadastro"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/CbDeixarLogado"
        android:layout_toEndOf="@+id/CbDeixarLogado" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tl_esqueci"
        android:id="@+id/BtTrocaSenha"
        android:onClick="chamarActivityTelaSenha"
        android:layout_below="@+id/EtSenha"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
