<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ff8dbd64">

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/imageButton6"
        android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"
        android:background="#ff8dbd64"
        android:onClick="chamarActivityTelaMenu" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tcr_cadatro"
        android:id="@+id/textView9"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tcr_Nome"
        android:id="@+id/textView10"
        android:textColor="#ffffffff"
        android:layout_margin="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tcr_tipo"
        android:id="@+id/textView11"
        android:textColor="#ffffffff"
        android:layout_margin="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText6"
        android:layout_gravity="center_horizontal"
        android:inputType="none" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tcr_endereco"
        android:id="@+id/textView12"
        android:layout_margin="20dp"
        android:textColor="#ffffffff" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:inputType="text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tcr_prosseguir"
        android:id="@+id/button7"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:onClick="chamarActivityCadastroRouties2" />
</LinearLayout>
