<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#ff8dbd64"
    android:orientation="vertical">


    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/imageButton7"
        android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"
        android:background="#ff8dbd64"
        android:onClick="chamarActivityCadastroRouties" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tcr_cadatro"
        android:id="@+id/textView13"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tcr_imagem"
        android:id="@+id/textView14"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:textColor="#ffffffff" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText4"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tcr_foto"
        android:id="@+id/button8"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tcr_cadastrar"
        android:id="@+id/button9"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:onClick="chamarActivityRoutie2"
        android:nestedScrollingEnabled="false" />
</LinearLayout>
